==> MicrochipTech/winc1500-wifi-smart-device-enablement-kit-aws-cloud/mcu-firmware/saml21g18b_sensor_board_demo/src/cryptoauthlib/lib/hal/hal_samg55_i2c_asf.c <==
#include <asf.h>
#include <string.h>
#include <stdio.h>
#include "atca_hal.h"
#include "atca_device.h"
#include "hal_samg55_i2c_asf.h"

ATCA_STATUS hal_i2c_discover_devices(int busNum, ATCAIfaceCfg cfg[], int *found)
{
    ATCAIfaceCfg *head = cfg;
    uint8_t slaveAddress = 0x01;
    ATCADevice device;
    ATCAIface discoverIface;
    ATCACommand command;
    ATCAPacket packet;
    ATCA_STATUS status;
    uint8_t revs508[1][4] = { { 0x00, 0x00, 0x50, 0x00 } };
    uint8_t revs108[1][4] = { { 0x80, 0x00, 0x10, 0x01 } };
    uint8_t revs204[3][4] = { { 0x00, 0x02, 0x00, 0x08 },
                              { 0x00, 0x02, 0x00, 0x09 },
                              { 0x00, 0x04, 0x05, 0x00 } };
    int i;

    /** \brief default configuration, to be reused during discovery process */
    ATCAIfaceCfg discoverCfg = {
        .iface_type               = ATCA_I2C_IFACE,
        .devtype                  = ATECC508A,
        .atcai2c.slave_address    = 0x07,
        .atcai2c.bus              = busNum,
        .atcai2c.baud             = 400000,
        .wake_delay               = 800,
        .rx_retries               = 3
    };

    ATCAHAL_t hal;

    if (busNum < 0)
    {
        return ATCA_COMM_FAIL;
    }

    hal_i2c_init(&hal, &discoverCfg);
    device = newATCADevice(&discoverCfg);
    discoverIface = atGetIFace(device);
    command = atGetCommands(device);

    // iterate through all addresses on given i2c bus
    // all valid 7-bit addresses go from 0x07 to 0x78
    for (slaveAddress = 0x07; slaveAddress <= 0x78; slaveAddress++)
    {
        discoverCfg.atcai2c.slave_address = slaveAddress << 1; // turn it into an 8-bit address which is what the rest of the i2c HAL is expecting when a packet is sent

        // wake up device
        // If it wakes, send it a dev rev command.  Based on that response, determine the device type
        // BTW - this will wake every cryptoauth device living on the same bus (ecc508a, sha204a)

        if (hal_i2c_wake(discoverIface) == ATCA_SUCCESS)
        {
            (*found)++;
            memcpy( (uint8_t*)head, (uint8_t*)&discoverCfg, sizeof(ATCAIfaceCfg));

            memset(packet.data, 0x00, sizeof(packet.data));

            // get devrev info and set device type accordingly
            atInfo(command, &packet);
            if ((status = atGetExecTime(packet.opcode, command)) != ATCA_SUCCESS)
            {
                continue;
            }

            // send the command
            if ( (status = atsend(discoverIface, (uint8_t*)&packet, packet.txsize)) != ATCA_SUCCESS)
            {
                printf("packet send error\r\n");
                continue;
            }

            // delay the appropriate amount of time for command to execute
            atca_delay_ms((command->execution_time_msec) + 1);

            // receive the response
            if ( (status = atreceive(discoverIface, &(packet.data[0]), &(packet.rxsize) )) != ATCA_SUCCESS)
            {
                continue;
            }

            if ( (status = isATCAError(packet.data)) != ATCA_SUCCESS)
            {
                continue;
            }

            // determine device type from common info and dev rev response byte strings
            for (i = 0; i < (int)sizeof(revs508) / 4; i++)
            {
                if (memcmp(&packet.data[1], &revs508[i], 4) == 0)
                {
                    discoverCfg.devtype = ATECC508A;
                    break;
                }
            }

            for (i = 0; i < (int)sizeof(revs204) / 4; i++)
            {
                if (memcmp(&packet.data[1], &revs204[i], 4) == 0)
                {
                    discoverCfg.devtype = ATSHA204A;
                    break;
                }
            }

            for (i = 0; i < (int)sizeof(revs108) / 4; i++)
            {
                if (memcmp(&packet.data[1], &revs108[i], 4) == 0)
                {
                    discoverCfg.devtype = ATECC108A;
                    break;
                }
            }

            atca_delay_ms(15);
            // now the device type is known, so update the caller's cfg array element with it
            head->devtype = discoverCfg.devtype;
            head++;
        }

        hal_i2c_idle(discoverIface);
    }

    hal_i2c_release(&hal);

    return ATCA_SUCCESS;
}

ATCA_STATUS hal_i2c_send(ATCAIface iface, uint8_t *txdata, int txlength)
{
#ifdef DEBUG_HAL
    printf("hal_i2c_send()\r\n");

    printf("\r\nCommand Packet (size:0x%.8x)\r\n", (uint32_t)txlength);
    printf("Count  : %.2x\r\n", txdata[1]);
    printf("Opcode : %.2x\r\n", txdata[2]);
    printf("Param1 : %.2x\r\n", txdata[3]);
    printf("Param2 : "); print_array(&txdata[4], 2);
    if (txdata[1] > 7)
    {
        printf("Data   : "); print_array(&txdata[6], txdata[1] - 7);
    }
    printf("CRC    : "); print_array(&txdata[txdata[1] - 1], 2);
    printf("\r\n");
#endif

    ATCAIfaceCfg *cfg = atgetifacecfg(iface);
    // set to default i2c bus
    if (cfg->atcai2c.bus > MAX_I2C_BUSES - 1)
    {
        cfg->atcai2c.bus = 0;
    }
    int bus = cfg->atcai2c.bus;

    txdata[0] = 0x03;   // insert the Word Address Value, Command token
    txlength++;         // account for word address value byte.

    twi_packet_t packet = {
        .chip        = cfg->atcai2c.slave_address >> 1,
        .addr        = { 0 },
        .addr_length = 0,
        .buffer      = txdata,
        .length      = (uint32_t)txlength //(uint32_t)txdata[1]
    };

    // for this implementation of I2C with CryptoAuth chips, txdata is assumed to have ATCAPacket format

    // other device types that don't require i/o tokens on the front end of a command need a different hal_i2c_send and wire it up instead of this one
    // this covers devices such as ATSHA204A and ATECCx08A that require a word address value pre-pended to the packet

    if (twi_master_write(i2c_hal_data[bus]->twi_master_instance, &packet) != TWI_SUCCESS)
    {
        return ATCA_COMM_FAIL;
    }

    return ATCA_SUCCESS;
}

ATCA_STATUS hal_i2c_receive(ATCAIface iface, uint8_t *rxdata, uint16_t *rxlength)
{
#ifdef DEBUG_HAL
    printf("hal_i2c_receive()\r\n");
#endif

    ATCAIfaceCfg *cfg = atgetifacecfg(iface);
    // set to default i2c bus
    if (cfg->atcai2c.bus > MAX_I2C_BUSES - 1)
    {
        cfg->atcai2c.bus = 0;
    }
    int bus = cfg->atcai2c.bus;
    int retries = cfg->rx_retries;
    uint32_t status = !TWI_SUCCESS;

    twi_packet_t packet = {
        .chip        = cfg->atcai2c.slave_address >> 1,
        .addr        = { 0 },
        .addr_length = 0,
        .buffer      = rxdata,
        .length      = (uint32_t)*rxlength
    };

    while (retries-- > 0 && status != TWI_SUCCESS)
    {
        status = twi_master_read(i2c_hal_data[bus]->twi_master_instance, &packet);
    }
    if (status != TWI_SUCCESS)
    {
        if (retries <= 0)
        {
            return ATCA_TOO_MANY_COMM_RETRIES;
        }

        return ATCA_COMM_FAIL;
    }

#ifdef DEBUG_HAL
    printf("\r\nResponse Packet (size:0x%.4x)\r\n", rxlength);
    printf("Count  : %.2x\r\n", rxdata[0]);
    if (rxdata[0] > 3)
    {
        printf("Data   : "); print_array(&rxdata[1], rxdata[0] - 3);
        printf("CRC    : "); print_array(&rxdata[rxdata[0] - 2], 2);
    }
    printf("\r\n");
#endif

    return ATCA_SUCCESS;
}

ATCA_STATUS hal_i2c_wake(ATCAIface iface)
{
    ATCAIfaceCfg *cfg = atgetifacecfg(iface);

    //set to default i2c bus
    if (cfg->atcai2c.bus > MAX_I2C_BUSES - 1)
    {
        cfg->atcai2c.bus = 0;
    }
    int bus = cfg->atcai2c.bus;
    int retries = cfg->rx_retries;
    uint32_t bdrt = cfg->atcai2c.baud;
    int status = !TWI_SUCCESS;
    uint8_t data[4], expected[4] = { 0x04, 0x11, 0x33, 0x43 };

    // if not already at 100kHz, change it
    if (bdrt != 100000)
    {
        change_i2c_speed(iface, 100000);
    }

    // Send 0x00 as wake pulse
    twi_write_byte(i2c_hal_data[bus]->twi_master_instance, 0x00);

    // rounded up to the nearest ms
    atca_delay_ms(((uint32_t)cfg->wake_delay + (1000 - 1)) / 1000);   // wait tWHI + tWLO which is configured based on device type and configuration structure

    twi_packet_t packet = {
        .chip        = cfg->atcai2c.slave_address >> 1,
        .addr        = { 0 },
        .addr_length = 0,
        .buffer      = data,
        .length      = 4
    };

    // if necessary, revert baud rate to what came in.
    if (bdrt != 100000)
    {
        change_i2c_speed(iface, bdrt);
    }

    while (retries-- > 0 && status != TWI_SUCCESS)
    {
        status = twi_master_read(i2c_hal_data[bus]->twi_master_instance, &packet);
    }
    if (status != TWI_SUCCESS)
    {
        if (retries <= 0)
        {
            return ATCA_TOO_MANY_COMM_RETRIES;
        }

        return ATCA_COMM_FAIL;
    }

    if (memcmp(data, expected, 4) == 0)
    {
        return ATCA_SUCCESS;
    }

    return ATCA_COMM_FAIL;
}

ATCA_STATUS hal_i2c_idle(ATCAIface iface)
{
    ATCAIfaceCfg *cfg = atgetifacecfg(iface);

    // set to default i2c bus
    if (cfg->atcai2c.bus > MAX_I2C_BUSES - 1)
    {
        cfg->atcai2c.bus = 0;
    }
    int bus = cfg->atcai2c.bus;
    uint8_t data[4];

    data[0] = 0x02; // idle word address value

    twi_packet_t packet = {
        .chip        = cfg->atcai2c.slave_address >> 1,
        .addr        = { 0 },
        .addr_length = 0,
        .buffer      = data,
        .length      = 1
    };

    if (twi_master_write(i2c_hal_data[bus]->twi_master_instance, &packet) != TWI_SUCCESS)
    {
        return ATCA_COMM_FAIL;
    }

    return ATCA_SUCCESS;
}

ATCA_STATUS hal_i2c_sleep(ATCAIface iface)
{
    ATCAIfaceCfg *cfg = atgetifacecfg(iface);

    //// set to default i2c bus
    if (cfg->atcai2c.bus > MAX_I2C_BUSES - 1)
    {
        cfg->atcai2c.bus = 0;
    }
    int bus = cfg->atcai2c.bus;
    uint8_t data[4];

    data[0] = 0x01; // sleep word address value

    twi_packet_t packet = {
        .chip        = cfg->atcai2c.slave_address >> 1,
        .addr        = { 0 },
        .addr_length = 0,
        .buffer      = data,
        .length      = 1
    };

    if (twi_master_write(i2c_hal_data[bus]->twi_master_instance, &packet) != TWI_SUCCESS)
    {
        return ATCA_COMM_FAIL;
    }

    return ATCA_SUCCESS;
}
